8290092: Temporary files are kept when call Clipboard.getSystemClipboard().getImage()

Ádded STGM_DELETEONRELEASE flag to StgCreateDocfile call, which removes
the file on IStorage release.