modules/javafx.graphics/src/main/native-glass/win/GlassClipboard.cpp
@@ -435,10 +435,13 @@ HRESULT PopImage(
     IStoragePtr spStorage;
     OLE_HRT( ::StgCreateDocfile(
         NULL,
-        STGM_READWRITE | STGM_SHARE_EXCLUSIVE | STGM_DIRECT | STGM_CREATE,
+        STGM_READWRITE | STGM_SHARE_EXCLUSIVE | STGM_DIRECT | STGM_CREATE | STGM_DELETEONRELEASE,
         NULL,
         &spStorage))
 
+    STATSTG stgStats;
+    spStorage->Stat(&stgStats, STATFLAG_DEFAULT);
+    STRACE(stgStats.pwcsName);
     IViewObject2Ptr view;
     OLE_HRT(::OleCreateStaticFromData(
         p,
@@ -506,6 +509,7 @@ HRESULT PopImage(
                     SelectBitmap(hMemoryDC, hOldBM);
                 }
             }
+            
             ::DeleteDC(hMemoryDC);
         }
         STRACE(_T("IViewObject size: %08x %08x"), size.cx, size.cy);
